--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "tabWidth": 2,
   "useTabs": true,
+  "semi": true,
   "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindAttributes": ["myClassList"]
+  "tailwindStylesheet": "./src/index.css"
 }
